--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: py_canoe
-description: Python package for controlling Vector CANoe tool
+title: py_uml_gen_gui
+description: Python UML diagrams generator GUI
 show_downloads: true
 google_analytics:
 theme: jekyll-theme-hacker
