--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,10 +1,10 @@
-site_name: py_canoe
-site_url: https://chaitu-ycr.github.io/py_canoe/
-site_description: Python Library for controlling Vector CANoe tool
+site_name: py_uml_gen_gui
+site_url: https://chaitu-ycr.github.io/py_uml_gen_gui/
+site_description: Python UML diagrams generator GUI
 site_author: chaitu-ycr
 
-repo_name: chaitu-ycr/py_canoe
-repo_url: https://github.com/chaitu-ycr/py_canoe
+repo_name: chaitu-ycr/py_uml_gen_gui
+repo_url: https://github.com/chaitu-ycr/py_uml_gen_gui
 edit_uri: blob/main/docs/
 
 
