--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["flit_core >=3.2,<4"]
 build-backend = "flit_core.buildapi"
 
 [project]
-name = "py_canoe"
+name = "py_uml_gen_gui"
 authors = [{name = "chaitu-ycr", email = "chaiu.ycr@gmail.com"}]
 readme = "README.md"
 license = {file = "LICENSE"}
@@ -17,8 +17,10 @@ classifiers = [
 dynamic = ["version", "description"]
 requires-python = ">=3.6"
 dependencies = [
-    "pywin32 >= 305",
+    "pylint",
+    "graphviz",
+    "PySimpleGUI",
 ]
 
 [project.urls]
-Home = "https://github.com/chaitu-ycr/py_canoe"
+Home = "https://github.com/chaitu-ycr/py_uml_gen_gui"
